--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,13 @@ body{
 }
 
 .cabecalho{
-    border-radius: 5px 5px 0px 0px;
-    background-color: var(--cor03);
-   height: 60px;
-   
+    background-color: white;
+    height: 52px;
 }
 
 .navegacao{
-    padding-bottom: 5px;
+    
+    padding-bottom: 3px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -47,12 +46,12 @@ body{
 }
 
 .menu-a{
-    margin-top: 10px;
+    margin-top: 6px;
     padding: 5px;
     font-family: var(--fonte01);
     font-size: 18px;
     transition: .3s;
-    color: white;
+    color: var(--cor04);
     font-weight: 500;
     align-items: center;
 }
@@ -72,7 +71,7 @@ body{
 }
 
 .img-03{
-    border-radius: 0px 0px 5px 5px;
+    border-radius: 0px 0px 6px 6px;
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -93,6 +92,6 @@ body{
 .div-rodape{
     color: white;
     font-family: var(--fonte1);
-    padding: 10px;
+    padding: 7px;
     font-size: 13px;
 }
